Fix top bar alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1705,6 +1705,9 @@ tab-selector {
     .active-tab {
       color: var(--highlight);
       border-bottom: 1.5px solid var(--highlight);
+      &.first-tab {
+        padding-left: 0px;
+      }
     }
   }
   button {
